# citadel

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.fly  Dockerfile.local  docker-compose-3node.yml  docker-compose.yml  flake.nix  fly.meetme.toml  fly.sync-canary.toml  fly.toml  test-3node.sh
.github/workflows/: ci.yml  deploy.yml
crates/citadel-consensus/src/: convergence.rs  lib.rs  threshold.rs  validity.rs
crates/citadel-crdt/: Cargo.toml
crates/citadel-crdt/src/: lib.rs
crates/citadel-dht/src/: entry.rs  lib.rs  peer.rs  routing.rs  state.rs
crates/citadel-docs/: Cargo.toml
crates/citadel-docs/src/: lib.rs
crates/citadel-gossip/: Cargo.toml
crates/citadel-gossip/src/: lib.rs
crates/citadel-lens/: Cargo.toml
crates/citadel-lens/src/: accountability.rs  admin_cli.rs  admin_socket.rs  api.rs  convergence_test.rs  cvdf.rs  error.rs  lib.rs  liveness.rs  main.rs  mesh.rs  node.rs  proof_of_latency.rs  pvdf.rs  service.rs  storage.rs  vdf_race.rs  ws.rs  ws_admin.rs
crates/citadel-lens/src/mesh/: flood.rs  mod.rs  peer.rs  peer_addr_store.rs  service.rs  slot.rs  spore.rs  state.rs  switchboard.rs  tgp.rs  transport.rs
crates/citadel-lens/src/models/: category.rs  content_types.rs  featured_release.rs  mod.rs  release.rs  site.rs  site_manifest.rs
crates/citadel-lens/tests/: featured_sync_test.rs  mesh_propagation_test.rs
crates/citadel-ping/: Cargo.toml
crates/citadel-ping/src/: lib.rs
crates/citadel-protocols/: Cargo.toml
crates/citadel-protocols/src/: coordinator.rs  lib.rs  spore_sync.rs
crates/citadel-spore/src/: lib.rs
crates/citadel-topology/benches/: topology_bench.rs
crates/citadel-topology/src/: gap_and_wrap.rs  hex.rs  lib.rs  neighbors.rs  spiral.rs  spiral3d.rs
crates/citadel-transfer/src/: lib.rs  streaming.rs
crates/citadel-vis/src/: events.rs  lib.rs  playback.rs  server.rs  simulation.rs
crates/citadel-wasm/: Cargo.toml
crates/citadel-wasm/src/: dht_minimal.rs  lib.rs  tgp_udp.rs  ubts.rs
crates/citadel-wgpu/src/: camera.rs  lib.rs  mesh_data.rs  renderer.rs  traffic.rs
crates/citadel-ygg/: Cargo.toml
crates/citadel-ygg/src/: lib.rs
docker/: .env.example  .gitignore  Dockerfile  README.md  citadel.py  docker-compose.meetme.yml
docs/: GAP_AND_WRAP.md  MESH_PROTOCOL.md  TGP_NATIVE.md
k8s/: citadel-lens.yaml
proofs/: CitadelProofs.lean  README.md
proofs/CitadelProofs/: Broadcast.lean  CRDT.lean  CVDF.lean  CitadelIntegration.lean  Constitutional.lean  Convergence.lean  EmergentOmniscience.lean  FLPBypass.lean  GapAndWrap.lean  Liveness.lean  MeshProtocol.lean  Spiral.lean  Spore.lean  Topology.lean  Transfer.lean  TwoHopKnowledge.lean  VdfRace.lean  VesperObserver.lean  VesperRatchet.lean  VesperTriad.lean  VesperWall.lean
proofs/CitadelProofs/CRDT/: Basic.lean  Bilateral.lean  Convergence.lean  PracticalCAP.lean  StructuralLinearizability.lean  TGPCollapse.lean
proofs/CitadelProofs/archive/: Spiral.lean
scripts/: lens-dev.sh  run-5-nodes.sh  simulate_mesh.py
