[workspace]
resolver = "2"
members = [
    "crates/citadel-topology",
    "crates/citadel-spore",
    "crates/citadel-dht",
    "crates/citadel-crdt",
    "crates/citadel-docs",
    "crates/citadel-gossip",
    "crates/citadel-ping",
    "crates/citadel-consensus",
    "crates/citadel-protocols",
    "crates/citadel-transfer",
    "crates/citadel-lens",
    "crates/citadel-vis",
    "crates/citadel-wgpu",
    "crates/citadel-cli",
    "crates/citadel-wasm",
    "crates/citadel-logging",
    "crates/citadel-metrics",
    "crates/citadel-utils",
    "crates/citadel-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lagun Project Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/lagun-project/citadel"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
quinn = "0.11"
rustls = "0.23"

# Crypto
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Internal crates
citadel-topology = { path = "crates/citadel-topology" }
citadel-spore = { path = "crates/citadel-spore" }
citadel-dht = { path = "crates/citadel-dht" }
citadel-crdt = { path = "crates/citadel-crdt" }
citadel-docs = { path = "crates/citadel-docs" }
citadel-gossip = { path = "crates/citadel-gossip" }
citadel-ping = { path = "crates/citadel-ping" }
citadel-consensus = { path = "crates/citadel-consensus" }
citadel-protocols = { path = "crates/citadel-protocols" }
citadel-utils = { path = "crates/citadel-utils" }
citadel-logging = { path = "crates/citadel-logging" }
citadel-metrics = { path = "crates/citadel-metrics" }
citadel-transfer = { path = "crates/citadel-transfer" }
