[package]
name = "citadel-gossip"
version.workspace = true
edition = "2021"
description = "Ephemeral gossip messages with TTL for Citadel"
license = "AGPL-3.0-or-later"

[dependencies]
# Citadel crates
citadel-crdt = { path = "../citadel-crdt" }
citadel-spore = { path = "../citadel-spore" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }
