[package]
name = "citadel-lens"
version.workspace = true
edition = "2021"
description = "Lens node for Citadel mesh - distributed content platform"
license.workspace = true

[[bin]]
name = "lens-node"
path = "src/main.rs"

[[bin]]
name = "lens-admin"
path = "src/admin_cli.rs"

[dependencies]
# Citadel crates
citadel-topology = { path = "../citadel-topology" }
citadel-dht = { path = "../citadel-dht" }
citadel-protocols = { path = "../citadel-protocols" }
citadel-spore = { path = "../citadel-spore" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crypto
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = "0.8"
getrandom = "0.2"

# Storage
rocksdb = "0.22"

# HTTP server + WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
