[package]
name = "citadel-lens"
version.workspace = true
edition = "2021"
description = "Lens node for Citadel mesh - distributed content platform"
license.workspace = true

[[bin]]
name = "lens-node"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "lens-admin"
path = "src/admin_cli.rs"
required-features = ["server"]

[features]
default = ["server"]
server = [
    "dep:redb",
    "dep:axum",
    "dep:tower-http",
    "dep:clap",
    "dep:dirs",
    "dep:chrono",
    "dep:reqwest",
    "dep:pprof",
    "dep:citadel-dht",
    "dep:citadel-protocols",
    "dep:citadel-crdt",
    "dep:citadel-docs",
    "dep:citadel-ygg",
]

[dependencies]
# Citadel crates (always available)
citadel-topology = { path = "../citadel-topology" }
citadel-spore = { path = "../citadel-spore" }

# Citadel crates (server only)
citadel-dht = { path = "../citadel-dht", optional = true }
citadel-protocols = { path = "../citadel-protocols", optional = true }
citadel-crdt = { path = "../citadel-crdt", optional = true }
citadel-docs = { path = "../citadel-docs", optional = true }
citadel-ygg = { path = "../citadel-ygg", optional = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crypto
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = "0.8"
getrandom = "0.2"

# Server-only dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
redb = { version = "3", optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"], optional = true }
dirs = { version = "5", optional = true }
pprof = { version = "0.15", features = ["flamegraph"], optional = true }

[dev-dependencies]
tempfile = "3"
