[package]
name = "citadel-protocols"
version.workspace = true
edition = "2021"
description = "Reliable bilateral coordination protocols for Citadel mesh network"
license = "AGPL-3.0-or-later"

[dependencies]
# Two Generals Protocol - reliable bilateral coordination with continuous flooding
two-generals = { git = "https://github.com/riffcc/two-generals", rev = "b7c7db69c480bb3a096e2a1888de8625a979b0b1" }
adaptive-flooding = { git = "https://github.com/riffcc/two-generals", rev = "b7c7db69c480bb3a096e2a1888de8625a979b0b1" }

# SPORE - Succinct Proof of Range Exclusions for optimal sync
citadel-spore = { path = "../citadel-spore" }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto for content hashing
blake3 = "1"

# Hex encoding for debug output
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
