[package]
name = "citadel-wasm"
version.workspace = true
edition = "2021"
description = "WASM bindings for Citadel P2P in browsers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    # WebRTC features for direct P2P with TGP packet format
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceTransportPolicy",
    # Fetch API for direct DHT operations
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
blake3 = "1.8"  # Fast, correct hashing
hex = "0.4"
sha2 = "0.10"   # SHA256 for UBTS
uuid = { version = "1.0", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
