[package]
name = "citadel-ygg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
yggdrasil-rs = { path = "../yggdrasil-rs" }
